--- a/lab_02/tests/CMakeLists.txt
+++ b/lab_02/tests/CMakeLists.txt
@@ -7,11 +7,11 @@ INCLUDE_DIRECTORIES(include)
 
 ADD_EXECUTABLE(
         tests
-        src/main.cpp
+        src/main.cpp src/testing_operators.cpp
         src/testing_neg.cpp src/testing_constructors.cpp
-        src/testing_append_methods.cpp src/testing_insert_methods.cpp
+        src/testing_append_methods.cpp
         src/testing_methods.cpp src/testing_iterators.cpp
-        src/testing_operators.cpp
+        
 )
 TARGET_LINK_LIBRARIES(tests ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} stdc++fs)
 
